--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-go-barber",
+  "name": "CCNPJ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -62,6 +62,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "sass": "^1.32.6"
   }
 }
